src/modules/unit/components/_view.scss
.view {
  &.view--selected {
    display: block;
  }

  /**
   * LIST VIEW
   */
  &.list-view {
    //overflow-y: scroll;
    //max-height: 90vh;

    .list-view__container {
      margin: 0;

      .list-view__block {
        border-top: 1px solid $ui-enabled;
        padding: $gap 0;
      }
    }

    .list-view-item {
      padding: 10px 0;
      display: flex;
      align-items: center;
      background: $content-background;
      margin-bottom: $gap;

      &__unit-details {
        flex: 2 0 auto;

        .list-view-item__unit-name {
          font-weight: 700;
        }

        .list-view-item__unit-status {
          background: $status-unknown;
          padding: 0 2px;
          width: 100%;
          text-transform: uppercase;
          font-size: 0.8em;
          color: $ui-text;
        }
      }

      &__unit-marker,
      &__unit-open {
        width: 50px;
        text-align: center;
        line-height: 30px;
        font-size: 30px;
      }

      &__unit-open {
        color: $ui-enabled;
      }

      &__unit-marker img {
        height: 40px;
      }


    }
  }

  &-popup {

    &__content {

    }
  }
}

.modal {

  &-dialog {
    position: fixed;
    left: 0;
    top: 0;
    z-index: 10000;
    margin: 0;
    width: 100%;
    height: 60%;
  }

  &-content {
    border-radius: 0;
    border: 0;
    height: 100%;
    background: #77d5ed;
    color: #333333;
  }
}

@media only screen and (min-width : 768px) {

  .modal {

    &-dialog {
      position: fixed;
      left: 0;
      top: 0;
      z-index: 10000;
      margin: 0;
      width: 400px;
      height: 100%;
    }

    &-content {
      border-radius: 0;
      border: 0;
      height: 100%;
      background: #77d5ed;
      color: #333333;
    }


  }
}

.single-unit-modal {

  &__box {
    background: #fff;
    margin: 10px 0 10px 0;
  }
}

